Fixed paragraph overflow

--- a/src/SingleContent/SingleContent.scss
+++ b/src/SingleContent/SingleContent.scss
@@ -6,6 +6,10 @@
 		max-width: 50vw;
 		text-align: left;
 		color: rgb(202, 202, 202);
+		p {
+			width: 100%;
+			height: auto;
+		}
 	}
 	.content-editor--wrapper {
 		input {
